# aoc2024

./: .gitignore  Cargo.toml  new_day.sh  readme.md
day01/src/: main.rs
day02/src/: main.rs
day03/src/: main.rs
day04/: input_bis.txt
day04/src/: main.rs
day05/src/: main.rs
day06/src/: main.rs
day07/src/: main.rs  solve2.rs
day08/: Cargo.toml
day08/src/: solve2.rs
day09/src/: solve1.rs
day11/: Cargo.toml
day11/src/: solve1.rs  solve2.rs
day12/src/: main.rs  solve1.rs  solve2.rs
day13/src/: main.rs  solve1.rs  solve2.rs
day14/src/: solve1.rs
src/: main.rs
src/day02/: main.rs
src/day03/: main.rs
src/day04/: main.rs
src/day05/: main.rs
src/day06/: main.rs
src/day07/: main.rs  solve1.rs
src/day08/: main.rs  solve1.rs
src/day09/: solve2.rs
src/day10/: solve1.rs  solve2.rs
src/day14/: solve2.rs
src/day15/: solve1.rs  solve2.rs
src/day16/: main.rs  solve1.rs  solve2.rs
src/day17/: main.rs  solve1.rs  solve2.rs
src/day18/: solve1.rs  solve2.rs
src/day19/: solve1.rs  solve2.rs
src/day20/: solve2.rs
src/day21/: solve1.rs
src/utils/math/: mod.rs  tests.rs
src/utils/point/: mod.rs
template/: solve1.rs
template/src/: main.rs
