[package]
name = "aoc2024"
version = "0.1.0"
edition = "2021"

[dependencies]
cached = "0.54.0"
nalgebra = "0.33.2"
regex = "1.11.1"

[lib]
name = "lib"
path = "src/lib.rs"

[[bin]]
name = "day01"
path = "src//main.rs"
test = false

[[bin]] 
name = "day02"
path = "src/day02/main.rs"
test = false

[[bin]] 
name = "day03"
path = "src/day03/main.rs"
test = false

[[bin]] 
name = "day04"
path = "src/day04/main.rs"
test = false

[[bin]] 
name = "day05"
path = "src/day05/main.rs"
test = false

[[bin]] 
name = "day06"
path = "src/day06/main.rs"
test = false

[[bin]] 
name = "day07"
path = "src/day07/main.rs"
test = false

[[bin]] 
name = "day08"
path = "src/day08/main.rs"
test = false

[[bin]] 
name = "day09"
path = "src/day09/main.rs"
test = false

[[bin]] 
name = "day10"
path = "src/day10/main.rs"
test = false

[[bin]] 
name = "day11"
path = "src/day11/main.rs"
test = false

[[bin]] 
name = "day12"
path = "src/day12/main.rs"
test = false

[[bin]] 
name = "day13"
path = "src/day13/main.rs"
test = false

[[bin]] 
name = "day14"
path = "src/day14/main.rs"
test = false

[[bin]] 
name = "day15"
path = "src/day15/main.rs"
test = false

[[bin]] 
name = "day16"
path = "src/day16/main.rs"
test = false

[[bin]] 
name = "day17"
path = "src/day17/main.rs"
tes = false

[[bin]] 
name = "day18"
path = "src/day18/main.rs"
tes = false

[[bin]] 
name = "day19"
path = "src/day19/main.rs"
tes = false

[[bin]] 
name = "day20"
path = "src/day20/main.rs"
tes = false
